# diary-tui

./: .gitignore  LICENSE  README.md  diary-tui.py  diary_tui.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  task_creator.py
diary_tui/: __init__.py  diary_tui.py  task_creator.py
tests/: __init__.py  test_config.py
