[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*

[coverage:run]
source = diary_tui
omit = 
    tests/*
    setup.py

[isort]
profile = black
line_length = 88

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist